	-> bugfix: selection of shapes in canvas did not work when moving a little bit during click
	-> iterate through table cells using arrow keys in canvas
	-> bugfix: duplicate document possible again
	-> bugfix: pages selector could not be opened in tools widget
	-> "delete tags for current selection" added to transcription widget context menu
	-> autosave: prompt user if he wants to load autosaved version if newer than loaded transcript
	
1.3.1:
	-> fixed delete document
	 
1.3.2:
	-> integrate baseline2polygon tool
	-> collection-wise / multiple documents server export
	-> include TranskribusMetadata element with transcript metadata in export
	-> fixed TEI export issues regarding XML escaping (issue TranskribusCore#15)
	-> fixed export issues regarding duplicate filenames (issue TranskribusCore#13)
	-> fixed issue regarding export of documents with backslashes in title (issue TranskribusCore#6)

1.3.3:
	-> drag & drop to move elements between different parent shapes in 'Layout' tab
	-> button in 'Layout' tab that moves subshapes to parent shapes according to geometrical overlap
	-> do not check for local autosaves by default; introduce additional save dropdown where autosaves can be loaded explicitly
	-> show history of finished server exports not older than 2 weeks in export dialog
	-> bugfix: merging baselines (issue TranskribusSwtGui#21)
	-> align shapes in canvas according to text alignment (enable via transcription widget toolbar)
	-> HTR CER chart: tick-units fixed on y-axis, annotation for stored HTR, minor changes
	-> crowdProject management
	
1.3.4:
	-> fix NullpointerException in TrpMessageDialog	
	
1.3.5:
	-> normalizing tag attributes available again
	-> TrpDocUploadHttp: no file size limits, resumable uploads
	-> import local docs with text files only (in txt subfolder, one text file for each image, dummy lines with size of image are created for each line)
	
	